# poker-bot

./: .gitignore  README.md  config.yaml  pyproject.toml
data/: selector_probe_report.json
src/pokerbot/equity/: evaluator.py  handinfo.py  montecarlo.py
src/pokerbot/io/: browser.py  domdump.py  email_inbox.py  executor.py  fields.py  log_parser.py  prompts.py  scraper.py  seater.py  selectors.py
src/pokerbot/model/: cards.py  positions.py  state.py
src/pokerbot/opponents/: aliases.py  classify.py  stats.py  store.py  tracking.py
src/pokerbot/runtime/: config.py  orchestrator.py  safety.py  selfplay.py
src/pokerbot/strategy/: decision.py  engine.py  exploit.py  mixer.py  notation.py  postflop.py  preflop.py  preflop_strength.py  ranges.py  sizing.py  timing.py
src/pokerbot/webapp/: index.html  server.py
tests/: test_aliases.py  test_bet_sizing.py  test_email_inbox.py  test_equity.py  test_executor.py  test_handinfo.py  test_log_parser.py  test_opponents.py  test_positions.py  test_prompts.py  test_runtime.py  test_scraper.py  test_seater.py  test_selfplay.py  test_state.py  test_strategy.py  test_table_size.py  test_timing.py  test_webapp.py
tools/: analyze_logs.py  app.py  gen_preflop_strength.py  observe.py  play.py  selector_probe.py  selfplay_harness.py
