[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pokerbot"
version = "0.1.0"
description = "PokerNow bot for consenting home games, NLH cash, 2-10 handed, exploitative."
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
    "pokerkit>=0.5",
    "eval7>=0.1.10",
    "pyyaml>=6.0",
    "rich>=13.0",
    "numpy>=1.26",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore:.*(deprecated|delimitedList).*"]  # silence eval7/pyparsing noise
